--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 ext {
     set('springCloudVersion', "2022.0.3")
+    set('commonsLangVersion', "3.12.0")
 }
 
 dependencyManagement {
@@ -35,8 +36,12 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    // Feign
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // for 'StringUtils'
+    implementation "org.apache.commons:commons-lang3:${commonsLangVersion}"
+
 }
 
 tasks.named('test') {
